# polymarket-bot

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  backtest.py  collect.py  crypto_trades_btc_v5.csv  direction_test.py  polymarket_data.csv  pyproject.toml
docs/: 2026-04-18-crypto-pulse-v5-design.md
src/: crypto_trades_btc_v5.csv
src/pulse/: __init__.py  config.py  dashboard.py  feed.py  logger.py  main.py  orders.py  risk.py  strategy.py
